updated links for charities

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
     <p class="spacer">A <a href="http://www.bubbawatsonfoundation.org/" target="_blank">Bubba Watson Foundation</a> Event benefitting: </p>
 
     <ul class="image-list small">
-      <li><a href="http://www.mymagic106.com" target="_blank"><img src="images/kids.png" alt=""></a></li>
-      <li><a href="http://www.wcoapensacola.com/" target="_blank"><img src="images/y.png" alt=""></a></li>
-      <li><a href="http://www.pensacolasjet.com" target="_blank"><img src="images/childrenhs.png" alt=""></a></li>
+      <li><a href="http://santarosakidshouse.com" target="_blank"><img src="images/kids.png" alt=""></a></li>
+      <li><a href="http://www.ymcanwfl.org" target="_blank"><img src="images/y.png" alt=""></a></li>
+      <li><a href="http://www.sacred-heart.org/childrenshospital/" target="_blank"><img src="images/childrenhs.png" alt=""></a></li>
     </ul>
   </div>
 </section>
